--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "Book"
-excerpt: "Short description of portfolio item number 2 "
+excerpt: "U.S. Innovation Inequality and Trumpism: The Political Economy of Technology Deserts in a Knowledge Economy (with Victor Menaldo) (forthcoming at Cambridge University Press, Elements Series)
 collection: Book
 ---
 
