--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -2,6 +2,7 @@
 title: "Book"
 excerpt: "U.S. Innovation Inequality and Trumpism: The Political Economy of Technology Deserts in a Knowledge Economy (with Victor Menaldo) (forthcoming at Cambridge University Press, Elements Series)
 collection: Book
+paperurl: 'https://www.nowpublishers.com/article/Details/PIP-0040'
 ---
 
 This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
